# claude-mem

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  package.json
.artifacts/v2-python-core/: REPORT.md
.artifacts/v2-python-core/images/: cli-demo-output.txt  project-structure.txt
.claude/: settings.json
.claude-plugin/: marketplace.json
core/: chunker.py  hook.py  indexer.py  injector.py  parser.py  ranking.py  server.py  store.py
core/tests/: test_hooks_integration.py  test_indexer.py  test_injector.py  test_integration.py  test_server.py  test_store.py  test_vote.py
core/tests/fixtures/: sample_session.jsonl
docs/: claude-mem-aituber.md
plugin/: package.json
plugin/.claude-plugin/: plugin.json
plugin/core/: README.md  chunker.py  cli.py  indexer.py  injector.py  parser.py  pyproject.toml  ranking.py  server.py  store.py
plugin/core/tests/: test_chunker.py  test_hook.py  test_integration.py  test_parser.py  test_ranking.py  test_store.py
plugin/hooks/: hooks.json
plugin/scripts/: cleanup-hook.js  context-generator.cjs  context-hook.js  mcp-server.cjs  new-hook.js  save-hook.js  summary-hook.js  user-message-hook.js  worker-cli.js  worker-service.cjs
plugin/ui/: viewer-bundle.js  viewer.html
scripts/: smart-install.js  sync-marketplace.cjs  sync-to-marketplace.sh
src/sdk/: prompts.ts
src/servers/: mcp-server.ts
src/services/: context-generator.ts  worker-service.ts
src/services/embedding/: EmbeddingClient.ts  (+2 more)
src/shared/: SettingsDefaultsManager.ts  paths.ts  timeline-formatting.ts  worker-utils.ts
src/ui/: viewer-template.html
(+23 files in other folders)
