[project]
name = "claude-mem-core"
version = "0.1.0"
description = "Claude-mem v2 core: JSONL indexer + FTS5 search"
requires-python = ">=3.12"
dependencies = [
    "litestar>=2.0",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
vec = ["sqlite-vec>=0.1"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "httpx>=0.27"]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
